form is finished

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<app-main-form></app-main-form>
+<div class="formular">
+  <app-main-form></app-main-form>
 
-<app-former-employer></app-former-employer>
-
-<router-outlet></router-outlet>
+  <router-outlet></router-outlet>
+</div>
